--- a/rancid/lib/panos.pm.in
+++ b/rancid/lib/panos.pm.in
@@ -45,135 +45,100 @@ package ios;
 #
 #  RANCID - Really Awesome New Cisco confIg Differ
 #
-# usage: zrancid [-dltCV] [-f filename | hostname]
+#  panos.pm - Palo Alto Networks rancid procedures
 #
 # 2013-01-05 - fix to put cli pager after scripting-mode is off - doug
 #			   hughesd@deshawresearch.com
 #
-use Getopt::Std;
-getopts('dflt:CV');
-if ($opt_V) {
-    print "@PACKAGE@ @VERSION@\n";
-    exit(0);
+
+use 5.010;
+use strict 'vars';
+use warnings;
+no warnings 'uninitialized';
+require(Exporter);
+our @ISA = qw(Exporter);
+
+#XXX use @VERSION@ when we have a version w/o letters in it
+#XXX use rancid @VERSION@;
+use rancid;
+
+@ISA = qw(Exporter rancid main);
+#XXX @Exporter::EXPORT = qw($VERSION @commandtable %commands @commands);
+
+# load-time initialization
+sub import {
+    0;
 }
-$log = $opt_l;
-$debug = $opt_d;
-$file = $opt_f;
-$host = $ARGV[0];
-$clean_run = 0;
-$found_end = 0;
-$timeo = 90;				# panlogin timeout in seconds
 
-my(@commandtable, %commands, @commands);# command lists
-my(%filter_pwds);			# password filtering mode
+# post-open(collection file) initialization
+sub init {
 
-# This routine is used to print out the router configuration
-sub ProcessHistory {
-    my($new_hist_tag,$new_command,$command_string,@string) = (@_);
-    if ((($new_hist_tag ne $hist_tag) || ($new_command ne $command))
-	&& scalar(%history)) {
-	print eval "$command \%history";
-	undef %history;
-    }
-    if (($new_hist_tag) && ($new_command) && ($command_string)) {
-	if ($history{$command_string}) {
-	    $history{$command_string} = "$history{$command_string}@string";
-	} else {
-	    $history{$command_string} = "@string";
+    # add content lines and separators
+    ProcessHistory("","","","!RANCID-CONTENT-TYPE: $devtype\n!\n");
+
+    0;
+}
+
+# main loop of input of device output
+sub inloop {
+    my($INPUT, $OUTPUT) = @_;
+    my($cmd, $rval);
+
+    # Paloalto buffers commands and prints them twice, once while buffering, 
+    # and once while executing. It's a bit weird and causes default rancid
+    # code a bit of a conniption, so we need to only execute the callbacks
+    # on second discovery.
+
+TOP: while(<$INPUT>) {
+	tr/\015//d;
+	if  (/[>#]\s?exit$/) {
+	    $clean_run = 1;
+	    print STDERR "exiting\n" if ($debug);
+	    # because exit occurs implicitly, too
+	    delete($commands{exit});
+	    last;
 	}
-    } elsif (($new_hist_tag) && ($new_command)) {
-	$history{++$#history} = "@string";
-    } else {
-	print "@string";
+	print STDERR ("line: $_") if ($debug);
+	if (/^Error:/) {
+	    print STDOUT ("$host panlogin error: $_");
+	    print STDERR ("$host panlogin error: $_") if ($debug);
+	    $clean_run = 0;
+	    last;
+	}
+	while (/\w+@\S+[>#]\s*($cmds_regexp)\s*$/) {
+	    $cmd = $1;
+	    if (!defined($prompt)) {
+		$prompt = ($_ =~ /^([^>]+>)/)[0];
+		$prompt =~ s/>/\[#>\]/;
+		$prompt =~ s/\(/\\(/;
+		$prompt =~ s/\)/\\)/;
+		print STDERR ("PROMPT MATCH: $prompt\n") if ($debug);
+	    }
+	    print STDERR ("HIT COMMAND:$_\n") if ($debug);
+	    print STDERR ("COMMAND is: $cmd|$commands{$cmd}\n") if ($debug);
+	    if (! defined($commands{$cmd})) {
+		print STDERR "$host: found unexpected command - \"$cmd\"\n";
+		$clean_run = 0;
+		last TOP;
+	    }
+	    $rval = &{$commands{$cmd}}($INPUT, $OUTPUT, $cmd);
+	    delete($commands{$cmd});
+	    if ($rval == -1) {
+		$clean_run = 0;
+		last TOP;
+	    }
+	}
     }
-    $hist_tag = $new_hist_tag;
-    $command = $new_command;
-    1;
-}
-
-sub numerically { $a <=> $b; }
-
-# This is a sort routine that will sort numerically on the
-# keys of a hash as if it were a normal array.
-sub keynsort {
-    local(%lines) = @_;
-    local($i) = 0;
-    local(@sorted_lines);
-    foreach $key (sort numerically keys(%lines)) {
-	$sorted_lines[$i] = $lines{$key};
-	$i++;
-    }
-    @sorted_lines;
-}
-
-# This is a sort routine that will sort on the
-# keys of a hash as if it were a normal array.
-sub keysort {
-    local(%lines) = @_;
-    local($i) = 0;
-    local(@sorted_lines);
-    foreach $key (sort keys(%lines)) {
-	$sorted_lines[$i] = $lines{$key};
-	$i++;
-    }
-    @sorted_lines;
-}
-
-# This is a sort routine that will sort on the
-# values of a hash as if it were a normal array.
-sub valsort{
-    local(%lines) = @_;
-    local($i) = 0;
-    local(@sorted_lines);
-    foreach $key (sort values %lines) {
-	$sorted_lines[$i] = $key;
-	$i++;
-    }
-    @sorted_lines;
-}
-
-# This is a numerical sort routine (ascending).
-sub numsort {
-    local(%lines) = @_;
-    local($i) = 0;
-    local(@sorted_lines);
-    foreach $num (sort {$a <=> $b} keys %lines) {
-	$sorted_lines[$i] = $lines{$num};
-	$i++;
-    }
-    @sorted_lines;
-}
-
-# This is a sort routine that will sort on the
-# ip address when the ip address is anywhere in
-# the strings.
-sub ipsort {
-    local(%lines) = @_;
-    local($i) = 0;
-    local(@sorted_lines);
-    foreach $addr (sort sortbyipaddr keys %lines) {
-	$sorted_lines[$i] = $lines{$addr};
-	$i++;
-    }
-    @sorted_lines;
-}
-
-# These two routines will sort based upon IP addresses
-sub ipaddrval {
-    my(@a) = ($_[0] =~ m#^(\d+)\.(\d+)\.(\d+)\.(\d+)$#);
-    $a[3] + 256 * ($a[2] + 256 * ($a[1] +256 * $a[0]));
-}
-sub sortbyipaddr {
-    &ipaddrval($a) <=> &ipaddrval($b);
 }
 
 # This routine parses "show system info"
 sub ShowInfo {
+    my($INPUT, $OUTPUT, $cmd) = @_;
     my($slot);
 
     print STDERR "    In ShowInfo:: $_" if ($debug);
 
-    while (<INPUT>) {
+    while (<$INPUT>) {
 	tr/\015//d;
 	last if (/^$prompt/);
 	next if (/^(time:|uptime:)/);
@@ -187,9 +152,10 @@ sub ShowInfo {
 
 # This routine parses "show config running"
 sub ShowConfig {
+    my($INPUT, $OUTPUT, $cmd) = @_;
     print STDERR "    In ShowConfig: $_" if ($debug);
 
-    while (<INPUT>) {
+    while (<$INPUT>) {
 	tr/\015//d;
 	if (/^}\s*$|\[edit\]/) {
 	    $found_end = 1;
@@ -204,134 +170,11 @@ sub ShowConfig {
 
 # eat lines until the next prompt shows up
 sub EatCommand {
-    while (<INPUT>) {
+    my($INPUT, $OUTPUT, $cmd) = @_;
+
+    while (<$INPUT>) {
 	tr/\015//d;
-	# print  STDERR "looking for prompt $prompt!\n";
 	last if (/^$prompt/);
     }
     return 0;
-}
-	
-# dummy function
-sub DoNothing {print STDOUT; return 0}
-
-# Main
-@commandtable = (
-	{'set cli scripting-mode on'	=> 'EatCommand'},
-	{'set cli pager off'	=> 'EatCommand'},
-	{'show system info'		=> 'ShowInfo'},
-	{'show config running'		=> 'ShowConfig'},
-);
-# Use an array to preserve the order of the commands and a hash for mapping
-# commands to the subroutine and track commands that have been completed.
-@commands = map(keys(%$_), @commandtable);
-%commands = map(%$_, @commandtable);
-
-$cisco_cmds=join(";",@commands);
-$cmds_regexp=join("|",@commands);
-
-if (length($host) == 0) {
-    if ($file) {
-	print(STDERR "Too few arguments: file name required\n");
-	exit(1);
-    } else {
-	print(STDERR "Too few arguments: host name required\n");
-	exit(1);
-    }
-}
-open(OUTPUT,">$host.new") || die "Can't open $host.new for writing: $!\n";
-select(OUTPUT);
-# make OUTPUT unbuffered if debugging
-if ($debug) { $| = 1; }
-
-if ($file) {
-    print STDERR "opening file $host\n" if ($debug);
-    print STDOUT "opening file $host\n" if ($log);
-    open(INPUT,"<$host") || die "open failed for $host: $!\n";
-} else {
-    print STDERR "executing panlogin -t $timeo -c\"$cisco_cmds\" $host\n" if ($debug);
-    print STDOUT "executing panlogin -t $timeo -c\"$cisco_cmds\" $host\n" if ($log);
-    if (defined($ENV{NOPIPE})) {
-	system "panlogin -t $timeo -c \"$cisco_cmds\" $host </dev/null > $host.raw 2>&1" || die "panlogin failed for $host: $!\n";
-	open(INPUT, "< $host.raw") || die "panlogin failed for $host: $!\n";
-    } else {
-	open(INPUT,"panlogin -t $timeo -c \"$cisco_cmds\" $host </dev/null |") || die "panlogin failed for $host: $!\n";
-    }
-}
-
-# determine password filtering mode
-if ($ENV{"FILTER_PWDS"} =~ /no/i) {
-	$filter_pwds = 0;
-} elsif ($ENV{"FILTER_PWDS"} =~ /all/i) {
-	$filter_pwds = 2;
-} else {
-	$filter_pwds = 1;
-}
-# Paloalto buffers commands and prints them twice, once while buffering, 
-# and once while executing. It's a bit weird and causes default rancid
-# code a bit of a conniption, so we need to only execute the callbacks
-# on second discovery.
-
-ProcessHistory("","","","#RANCID-CONTENT-TYPE: paloalto\n#\n");
-TOP: while(<INPUT>) {
-    tr/\015//d;
-    if  (/[>#]\s?exit$/) {
-	$clean_run=1;
-	print STDERR "exiting\n" if ($debug);
-	# because exit occurs implicitly, too
-	delete($commands{exit});
-	last;
-    }
-    print STDERR ("line: $_") if ($debug);
-    if (/^Error:/) {
-	print STDOUT ("$host panlogin error: $_");
-	print STDERR ("$host panlogin error: $_") if ($debug);
-	$clean_run=0;
-	last;
-    }
-    while (/\w+@\S+[>#]\s*($cmds_regexp)\s*$/) {
-	$cmd = $1;
-	if (!defined($prompt)) {
-	    $prompt = ($_ =~ /^([^>]+>)/)[0];
-		$prompt =~ s/>/\[#>\]/;
-		$prompt =~ s/\(/\\(/;
-		$prompt =~ s/\)/\\)/;
-	    print STDERR ("PROMPT MATCH: $prompt\n") if ($debug);
-	}
-	print STDERR ("HIT COMMAND:$_\n") if ($debug);
-	print STDERR ("COMMAND is: $cmd|$commands{$cmd}\n") if ($debug);
-	if (! defined($commands{$cmd})) {
-	    print STDERR "$host: found unexpected command - \"$cmd\"\n";
-	    $clean_run = 0;
-	    last TOP;
-	}
-	$rval = &{$commands{$cmd}};
-	delete($commands{$cmd});
-	if ($rval == -1) {
-	    $clean_run = 0;
-	    last TOP;
-	}
-    }
-}
-# Flush History
-ProcessHistory("","","","");
-# Cleanup
-close(INPUT);
-close(OUTPUT);
-
-if (defined($ENV{NOPIPE})) {
-    unlink("$host.raw") if (! $debug);
-}
-# check for completeness
-if (scalar(%commands) || !$clean_run || !$found_end) {
-    if (scalar(%commands)) {
-	printf(STDOUT "$host: missed cmd(s): %s\n", join(',', keys(%commands)));
-	printf(STDERR "$host: missed cmd(s): %s\n", join(',', keys(%commands))) if ($debug);
-    }
-    if (!$clean_run || !$found_end) {
-	print STDOUT "$host: End of run not found\n";
-	print STDERR "$host: End of run not found\n" if ($debug);
-	system("/usr/bin/tail -1 $host.new");
-    }
-    unlink "$host.new" if (! $debug);
 }
