--- a/rancid/bin/Makefile.in
+++ b/rancid/bin/Makefile.in
@@ -97,13 +97,12 @@ DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/Makefile.am \
 	$(srcdir)/mrvlogin.in $(srcdir)/mtrancid.in \
 	$(srcdir)/mtlogin.in $(srcdir)/nlogin.in $(srcdir)/nrancid.in \
 	$(srcdir)/nslogin.in $(srcdir)/nsrancid.in \
-	$(srcdir)/panlogin.in $(srcdir)/panrancid.in \
-	$(srcdir)/prancid.in $(srcdir)/rivlogin.in \
-	$(srcdir)/rivrancid.in $(srcdir)/rrancid.in \
-	$(srcdir)/srancid.in $(srcdir)/tlogin.in $(srcdir)/trancid.in \
-	$(srcdir)/xilogin.in $(srcdir)/xirancid.in \
-	$(srcdir)/xrancid.in $(srcdir)/wlogin.in $(srcdir)/zrancid.in \
-	$(top_srcdir)/depcomp
+	$(srcdir)/panlogin.in $(srcdir)/prancid.in \
+	$(srcdir)/rivlogin.in $(srcdir)/rivrancid.in \
+	$(srcdir)/rrancid.in $(srcdir)/srancid.in $(srcdir)/tlogin.in \
+	$(srcdir)/trancid.in $(srcdir)/xilogin.in \
+	$(srcdir)/xirancid.in $(srcdir)/xrancid.in $(srcdir)/wlogin.in \
+	$(srcdir)/zrancid.in $(top_srcdir)/depcomp
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/acinclude.m4 \
 	$(top_srcdir)/configure.ac
@@ -116,9 +115,8 @@ CONFIG_CLEAN_FILES = control_rancid agmrancid alogin arancid anlogin \
 	complogin cssrancid dllogin elogin erancid f5rancid f10rancid \
 	flogin fnlogin fnrancid hlogin hrancid htlogin htrancid jlogin \
 	jerancid mrancid mrvlogin mtrancid mtlogin nlogin nrancid \
-	nslogin nsrancid panlogin panrancid prancid rivlogin rivrancid \
-	rrancid srancid tlogin trancid xilogin xirancid xrancid wlogin \
-	zrancid
+	nslogin nsrancid panlogin prancid rivlogin rivrancid rrancid \
+	srancid tlogin trancid xilogin xirancid xrancid wlogin zrancid
 CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)" "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
@@ -340,10 +338,10 @@ bin_SCRIPTS = agmrancid alogin anlogin arancid arrancid avologin \
 	control_rancid cssrancid dllogin elogin erancid f5rancid \
 	f10rancid flogin fnlogin fnrancid hlogin hrancid htlogin \
 	htrancid jerancid jlogin mrancid mrvlogin mtlogin mtrancid \
-	nlogin nrancid nslogin nsrancid panlogin panrancid rancid \
-	rancid rivlogin rivrancid rrancid slogin srancid tlogin \
-	trancid wlogin xilogin xirancid xrancid zrancid lg.cgi \
-	lgform.cgi rancid-cvs rancid-fe rancid-run
+	nlogin nrancid nslogin nsrancid panlogin rancid rancid \
+	rivlogin rivrancid rrancid slogin srancid tlogin trancid \
+	wlogin xilogin xirancid xrancid zrancid lg.cgi lgform.cgi \
+	rancid-cvs rancid-fe rancid-run
 # XXX hack for the rancid to get pkglibdir, see corresponding XXX below
 bin_in = rancid.in slogin.in
 EXTRA_DIST = lg.cgi.in lgform.cgi.in rancid-cvs.in rancid-fe.in rancid-run.in \
@@ -493,8 +491,6 @@ nslogin: $(top_builddir)/config.status $(srcdir)/nslogin.in
 nsrancid: $(top_builddir)/config.status $(srcdir)/nsrancid.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 panlogin: $(top_builddir)/config.status $(srcdir)/panlogin.in
-	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
-panrancid: $(top_builddir)/config.status $(srcdir)/panrancid.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 prancid: $(top_builddir)/config.status $(srcdir)/prancid.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
