--- a/lib/ios.pm.in
+++ b/lib/ios.pm.in
@@ -2147,16 +2147,16 @@ sub WriteTerm {
 	/^access-list\s+(\d\d?)\s+(\S+)\s+(\S+)/ &&
 	    ProcessHistory("ACL $1 $2","$aclsort","$3","$_") && next;
 	# order extended access-lists
-	/^access-list\s+(\d\d\d)\s+(\S+)\s+ip\s+host\s+(\S+)/ &&
-	    ProcessHistory("EACL $1 $2","$aclsort","$3","$_") && next;
-	/^access-list\s+(\d\d\d)\s+(\S+)\s+ip\s+(\d\S+)/ &&
-	    ProcessHistory("EACL $1 $2","$aclsort","$3","$_") && next;
-	/^access-list\s+(\d\d\d)\s+(\S+)\s+ip\s+any/ &&
+	/^access-list\s+(\d\d\d)\s+(\S+)\s+(\S+)\s+host\s+(\S+)/ &&
+	    ProcessHistory("EACL $1 $2","$aclsort","$4","$_") && next;
+	/^access-list\s+(\d\d\d)\s+(\S+)\s+(\S+)\s+(\d\S+)/ &&
+	    ProcessHistory("EACL $1 $2","$aclsort","$4","$_") && next;
+	/^access-list\s+(\d\d\d)\s+(\S+)\s+(\S+)\s+any/ &&
 	    ProcessHistory("EACL $1 $2","$aclsort","0.0.0.0","$_") && next;
 	# order arp lists
 	/^arp\s+(\d+\.\d+\.\d+\.\d+)\s+/ &&
 	    ProcessHistory("ARP","$aclsort","$1","$_") && next;
-	/^ip(v6)? prefix-list\s+(\S+)\s+seq\s+(\d+)\s+(permit|deny)\s+(\S+)(\/.*)$/
+	/^ip(v6)? prefix-list\s+(\S+)\s+seq\s+(\d+)\s+(permit|deny)\s+(\S+)(.*)/
 	    && ProcessHistory("PACL $2 $4","$aclsort","$5",
 			      "ip$1 prefix-list $2 $4 $5$6\n")
 	    && next;
