--- a/lib/iosxr.pm.in
+++ b/lib/iosxr.pm.in
@@ -1095,9 +1095,37 @@ sub WriteTerm {
 	    while (<$INPUT>) {
 		tr/\015//d;
 		last if (/^$prompt/ || /^\S/);
+		# ipv4 access-list name
+		#  remark NTP
+   		#  deny ipv4 host 224.0.1.1 any
+		#  deny ipv4 239.0.0.0 0.255.255.255 any
+		#  permit udp any eq 123 any
+		#  permit ipv4 nnn.nnn.nnn.nnn/nn any
+		#  permit nnn.nnn.nnn.nnn/nn
+		# ipv6 access-list name
+		#  permit ipv6 host 2001:nnnn::nnnn any
+		#  permit ipv6 2001:nnn::/nnn any
+		#  permit 2001:nnnn::/64 any
+		#  permit udp any eq 123 any
 		my($seq, $cmd, $resid) = ($_ =~ /^\s+(\d+) (\w+) (.+)/);
-		my($misc, $ip) = ($resid =~ /(\w+) (\S+\s)?(.+)/);
 		if ($cmd =~ /(permit|deny)/) {
+		    my($ip);
+		    my(@w) = ($resid =~ /(\S+) (\S+) (\S+\s)?(.+)/);
+		    for (my($i) = 0; $i < $#w; $i++) {
+			if ($w[$i] eq "any") {
+			    if ($nlri eq "ipv4") {
+				$ip = "255.255.255.255/32";
+			    } else {
+				$ip = "ffff:ffff:ffff:ffff:ffff:ffff:ffff:ffff/128";
+			    }
+			    last;
+			} elsif ($w[$i] =~ /^[:0-9]/ ||
+				 $2[$i] =~ /^[a-fA-F]{1,4}:/) {
+			    $ip = $w[$i];
+			    $ip =~ s/\s+$//;		# trim trailing WS
+			    last;
+			}
+		    }
 		    ProcessHistory("ACL $nlri $key $cmd", "$aclsort", "$ip",
 				   " $cmd $resid\n");
 		} else {
@@ -1109,8 +1137,11 @@ sub WriteTerm {
 	# order arp lists
 	/^arp\s+(\d+\.\d+\.\d+\.\d+)\s+/ &&
 	    ProcessHistory("ARP","$aclsort","$1","$_") && next;
-	/^ip prefix-list\s+(\S+)\s+seq\s+(\d+)\s+(permit|deny)\s+(\d\S+)(\/.*)$/ &&
+	/^ip prefix-list\s+(\S+)\s+seq\s+(\d+)\s+(permit|deny)\s+(\d\S+)(.*)/ &&
 	    ProcessHistory("PACL $1 $3","$aclsort","$4","ip prefix-list $1 $3 $4$5\n")
+	    && next;
+	/^ip(v4|v6) prefix-list\s+(\S+)\s+seq\s+(\d+)\s+(permit|deny)\s+(\S+)(.*)/ &&
+	    ProcessHistory("PACL $2 $4","$aclsort","$5","ip$1 prefix-list $2 $4 $5$6\n")
 	    && next;
 	# order logging statements
 	/^logging (\d+\.\d+\.\d+\.\d+)/ &&
